istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
  namespace: istio-system
spec:
  hosts: ["*"]
  gateways: ["httpbin-gw"]
  http:
    - route:
        - destination: { host: httpbin, subset: v1 }
